--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,78 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.title {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.map-container {
+  height: 500px;
+  margin: 20px 50px 20px 50px;
+}
+
+.info-container {
+  width: 80%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: .5fr .5fr;
+  margin: auto;
+}
+
+.location-container {
+  margin: 0 10px;
+  text-align: left;
+}
+
+.location-container > div:nth-child(1) {
+  font-weight: bold;
+  font-size: 20px;
+  text-align: left;
+}
+
+.location-container input {
+  width: 90%;
+  font-size: 18px;
+  margin-top: 5px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid #bdbdbd;
+  margin-bottom: 10px;
+}
+
+.instructions {
+  text-align: left;
+  margin: 20px 50px 0 60px;
+}
+
+.error-msg {
+  color: darkred;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.calc-btn {
+  margin-bottom: 15px !important;
+}
+
+.result {
+  font-weight: 400;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width:1000px) {
+  .grid-container { 
+    grid-template-columns: 1fr;
+  }
+}
